resolved the flex-wrap issue

--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -35,11 +35,12 @@ main{
     justify-content: space-around;
     flex-wrap: wrap;
     max-height: 100vh;
-    /* border: 1px solid red; */
+    
 }
 
 main div{
     width: 50%;
+    
 }
 
 .info{
@@ -47,8 +48,9 @@ main div{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 35%;
+    /* width: 35%; */
     text-align: center;
+    border: 1px solid red;
 
 }
 
